tests/health/gold/sdk/tests__lsp__field-completion-test.toit.gold
tests/lsp/field-completion-test.toit:38:5: error: Can't access instance members before `super` call
    field
    ^~~~~
tests/lsp/field-completion-test.toit:42:5: error: Can't access instance members before `super` call
    field
    ^~~~~
tests/lsp/field-completion-test.toit:47:5: error: Can't access instance members before `super` call
    field = 0
    ^~~~~
tests/lsp/field-completion-test.toit:51:5: error: Can't access instance members before `super` call
    field = 0
    ^~~~~
